доданий новий шрифт
доданий новий шрифт

--- a/newstaff.html
+++ b/newstaff.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/newstaff.css" rel="stylesheet" media="screen"> 
+    <link href="https://fonts.googleapis.com/css?family=Alice|Bad+Script|Open+Sans" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -86,7 +87,7 @@
               <img src="./images2/natalia.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Наталя Лозак</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.</p>
+                  <p>Творча особистість. Яка любить навчати дітей рисунку та живопису, грі на музичних іструментах та співів. Вона кожен день розвиває в дітей мистецький та творчий потенціал. Саме тому вас будуть тішити дітки приємними подаруночками, що вони самі зробили.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->
           </div><!--col-sm-4-->
@@ -108,7 +109,7 @@
                 <img src="./images2/joe.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Джоі Марасек</h3>
-                  <p>Джоі переїхав з Техасу декілька років тому. Він захоплюється фотографією та грою на гітарі. Має багатий досвід навчання англійської дітей різного віку. 
+                  <p>Джоі переїхав з Техасу декілька років тому. Він захоплюється фотографією та грою на гітарі. Має багатий досвід навчання англійської дітей різного віку. Швидко знаходить з дітьми спільну мову і  одразу стає їхнім найкращим другом.
                   </p>
                 </div><!--caption-->
               </div><!--thumbnail-->  
@@ -118,7 +119,7 @@
                 <img src="./images2/lesia.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Леся Городиловська</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.</p>
+                  <p>Пані Леся завжди сповнена нових ідей та планів. З нею дітки вчаться акторської майстерності та правильному розвитку мовлення, бо вони постійно приймають участь у виставах.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->          
             </div><!--col-sm-4-->
