--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Домашній християнський садочок Посмішка">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/new.css" rel="stylesheet" media="screen">  
+    <link href="css/new.css" rel="stylesheet" media="screen">
+    <link href="https://fonts.googleapis.com/css?family=Alice|Bad+Script|Open+Sans" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
