--- a/newcontacts.html
+++ b/newcontacts.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/newcontacts.css" rel="stylesheet" media="screen"> 
+    <link href="https://fonts.googleapis.com/css?family=Alice|Bad+Script|Open+Sans" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -47,7 +48,7 @@
                   <li>
                     <a href="./newabuot.html"><strong>Про нас</strong></a>
                   </li>
-                  <li class="active"> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
+                  <li> <a href="./newprograms.html"><strong><span>Програми</span></strong></a>
                     <ul>
                       <li><a href="./newprograms.html">Підготовка до школи</a>
                       </li>
@@ -58,7 +59,7 @@
                   <li>
                     <a href="newstaff.html"><strong>Наші вчителі</strong></a>
                   </li>
-                  <li>
+                  <li class="active">
                     <a href="./newcontacts.html"><strong>Контакти</strong></a>
                   </li>
                 </ul>
