--- a/newprograms.html
+++ b/newprograms.html
@@ -9,6 +9,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="css/newprograms.css
   " rel="stylesheet" media="screen"> 
+  <link href="https://fonts.googleapis.com/css?family=Alice|Bad+Script|Open+Sans" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -78,29 +79,29 @@
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 adication">
               <h2>Підготовка<br> до школи</h2>
-              <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce leo orci, tristique eget dignissim ut, porttitor eu mauris. Praesent pulvinar justo lectus, ac porttitor turpis imperdiet quis. Nunc malesuada sapien congue mattis maximus. Praesent vehicula tortor at maufgdhtyewfris </p>
+              <p>А ваші дітки вже готові йти до школи? Ми можемо допомогти ваші дитині до вступу у доросле самостійне життя школярика. З дітками будуть займатись підготовкою до шкільної програми: будуть вчитись писати і читати, вирізати, клеїти, співати і ще багато всього такого необхідного у школі.</p>
             </div><!--col-md-4-->
             <div class="col-xs-12 col-md-4 camp">
               <h2>Літній<br> табір</h2>
               <p>Кожного літа ми запрошуємо до нас команду американців. Вони проводять дитячий християнський табір. Табір відбувається англійською мовою. Наші волонтери перекладають діткам. Усі разом ми вивчаємо біблійні історії, ставимо сценки, співаємо, малюємо, готуємо, граємо та радіємо.</p>
             </div><!--col-md-4-->
-          </div><!-row-->
+          </div><!--row-->
         </div><!--conteiner-->
         <div class="conteiner programs">
           <div class="row">
-            <h2><strong>Спеціальні програми</strong></h2>
+            <h2>Спеціальні програми</h2>
             <div class="col-xs-12 col-sm-2">
               <img src="./images2/english1.jpg">
             </div><!--col-sm-2-->
             <div class="col-xs-12 col-sm-4 english">
-              <h4>Вивчення Англійської мови</h4>
+              <h4><strong>Вивчення Англійської мови</strong></h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
             </div><!--col-sm-4-->
             <div class="col-xs-12 col-sm-2">
               <img src="./images2/spanish_1.jpg">
             </div><!--col-sm-2-->
             <div class="col-xs-12 col-sm-4 spanish">
-              <h4>Вивчення Іспанської мови</h4>
+              <h4><strong>Вивчення Іспанської мови</strong></h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
             </div><!--col-sm-4-->
           </div><!--row-->
@@ -124,18 +125,18 @@
         <div class="conteiner addschool">
           <div class="row">
             <div class="col-sm-12">
-              <h2><strong>Підготовка до школи</strong></h2>
+              <h2>Підготовка до школи</h2>
             </div>
           </div>
         </div>
         <div class="conteiner addschool">
           <div class="row">
             <div class="col-sm-6">
-              <h4>Для кого?</h4>
+              <h4><strong>Для кого?</strong></h4>
               <p>Вступ до школи є якісно новим етапом у житті дитини. Щоб допомогти вашим діткам впоратись із цим завданням, запрошуємо діток віком 5-6 років у Посмішку на підготовку.Завдання курсу: адаптація дітей до школи та навчального процесу; навчання основ читання, письма, математики; розвиток пам'яті, уваги, мислення; вивчення англійської мови. Усі заняття будовані в цікавій ігровій формі. </p>
             </div>
             <div class="col-sm-6">
-              <h4>Що вивчаємо?</h4>
+              <h4><strong>Що вивчаємо?</strong></h4>
               <p> На занятях особливу увагу приділяємо:<br>
 -розвитоку пам'яті, уваги, уяви, мислення;<br>
 -навичкам писання (розвиток дрібної моторики руки);<br>
