змінено розмір випад меню
змінено розмір випад меню, додано про англійську

--- a/newprograms.html
+++ b/newprograms.html
@@ -95,7 +95,7 @@
             </div><!--col-sm-2-->
             <div class="col-xs-12 col-sm-4 english">
               <h4><strong>Вивчення Англійської мови</strong></h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
+              <p>Дітки дуже швидко втомлюються та втрачають увагу. Найкраще вони запам’ятовують у піснях, римівках, віршиках чи на цікавих ігрових заняттях. Саме за таким принципом Джоі будує свої заняття. Гра задіює активно уяву в дитини та пам’ять. При цьому у малюка буде поступово розвиватися логічне мисленя.     Якщо потрібно пояснити якесь загальне положення чи поняття, тоді Джої використовує ілюстрації або показує приклад. Також на заняттях використовуються яскраві малюнки, картинки та тематичні предмети.</p>
             </div><!--col-sm-4-->
             <div class="col-xs-12 col-sm-2">
               <img src="./images2/spanish_1.jpg">
@@ -112,7 +112,7 @@
               <img src="./images2/english4.jpg">
             </div><!--col-sm-2-->
             <div class="col-xs-12 col-sm-4 english">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempor vulputate diam et eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum, lacus sit amet rhoncus pretium, turpis quam iaculis quam, vel bibendum neque purus nec erat. Proin quis quam nisl. Vivamus molestie non metus ac congue. Vestibulum et nisl mauris. Mauris tincidunt metus in ex lacinia ornare. Etiam in tincidunt tellus. Ut erat lacus, tincidunt non enim at, semper rutrum diam. Nulla venenatis libero id tortor dictum ullamcorper.</p>
+              <p>На заняттях також використовуються різні відео-матеріали та аудіщ-матеріали. Дивлячись короткометражний мультфільм або історію, дошкільнята-малюки мимоволі запам’ятовують короткі фрази, а також поповнюють свій словниковий запас.Кожне заняття відповідає конкретній темі, яка вивчається протягом декількох занять. Головне завдання - зацікавити дітей, тому ми використовуємо багато методів для навчання. На заняттях ми звертаємо увагу на вимову вашої дитини.</p>
             </div><!--col-sm-4-->
             <div class="col-xs-12 col-sm-2">
               <img src="./images2/english3.jpg">
