--- a/newstaff.html
+++ b/newstaff.html
@@ -96,7 +96,7 @@
               <img src="./images2/duvan.png" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Дуван Варгас</h3>
-                  <p>Дуван приїхав з Колумбії восени 2016. У Львові він навчає іспанської дітей та дорослих, танцює сальсу та веде англомовне прославлення у християнській організації. В Колумбії Дуван викладав англійську в університеті столиці.</p>
+                  <p>Дуван приїхав з Колумбії восени 2016. У Львові він навчає іспанської дітей та дорослих, танцює сальсу та веде англомовне прославлення у християнській організації. В Колумбії Дуван викладав англійську в університеті столиці. З Дуваном ваш малюк буде співати іспанською.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->  
             </div><!--col-sm-4-->
