--- a/newstaff.html
+++ b/newstaff.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-4">
             <div class="thumbnail">
-              <img src="./images2/Erika.png" class="img-rounded">
+              <img src="./images2/Erica.jpg" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Еріка Татчин</h3>
                   <p>Випускниця Українського Католицького Університету, мама двох донечок. Мріяла створити християнський садочок ще з шкільних років. До Посмішки Еріка працювала у садку св. Миколая вихователем у яслах та викладачем англійської мови.</p>
@@ -84,7 +84,7 @@
           </div><!--col-sm-4-->
           <div class="col-xs-12 col-sm-4">
             <div class="thumbnail">
-              <img src="./images2/natalia.png" class="img-rounded">
+              <img src="./images2/natali.jpg" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Наталя Лозак</h3>
                   <p>Творча особистість. Яка любить навчати дітей рисунку та живопису, грі на музичних іструментах та співів. Вона кожен день розвиває в дітей мистецький та творчий потенціал. Саме тому вас будуть тішити дітки приємними подаруночками, що вони самі зробили.</p>
@@ -93,7 +93,7 @@
           </div><!--col-sm-4-->
           <div class="col-xs-12 col-sm-4">
             <div class="thumbnail">
-              <img src="./images2/duvan.png" class="img-rounded">
+              <img src="./images2/duvan.jpg" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Дуван Варгас</h3>
                   <p>Дуван приїхав з Колумбії восени 2016. У Львові він навчає іспанської дітей та дорослих, танцює сальсу та веде англомовне прославлення у християнській організації. В Колумбії Дуван викладав англійську в університеті столиці. З Дуваном ваш малюк буде співати іспанською.</p>
@@ -104,6 +104,7 @@
         </div><!--conteiner-->
         <div class="conteiner two">
           <div class="row">
+            <div class="col-sm-2"></div>
             <div class="col-xs-12 col-sm-4">
               <div class="thumbnail">
                 <img src="./images2/joe.png" class="img-rounded">
@@ -116,22 +117,14 @@
             </div><!--col-sm-4-->
             <div class="col-xs-12 col-sm-4">
               <div class="thumbnail">
-                <img src="./images2/lesia.png" class="img-rounded">
+                <img src="./images2/lesia.jpg" class="img-rounded">
                 <div class="caption">
                   <h3 class="text-center">Леся Городиловська</h3>
                   <p>Пані Леся завжди сповнена нових ідей та планів. З нею дітки вчаться акторської майстерності та правильному розвитку мовлення, бо вони постійно приймають участь у виставах.</p>
                 </div><!--caption-->
               </div><!--thumbnail-->          
             </div><!--col-sm-4-->
-            <div class="col-xs-12 col-sm-4">
-              <div class="thumbnail">
-                <img src="./images2/svit.png" class="img-rounded">
-                <div class="caption">
-                  <h3 class="text-center">Світлана Кір'янова</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque.</p>
-                </div><!--caption-->
-              </div><!--thumbnail-->          
-            </div><!--col-sm-4-->
+            
           </div><!--row-->
         </div><!--conteiner-->
         <div class="conteiner">
@@ -154,7 +147,7 @@
             <div class="col-sm-4">
               <address><strong>Львів</strong>
               <br>Пл. Григоренка 5/17
-              <br>9.30-15.30
+              <br>10.00-16.00
               </address>
             </div><!--col-sm-4-->
             <div class="col-sm-4">
